k8s-zerotrust/istio-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: shop-mtls
  namespace: shop
spec:
  mtls:
    mode: STRICT
