k8s-zerotrust/cilium-global.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: deny-node-to-workload
spec:
  endpointSelector:
    matchLabels:
      "k8s:io.kubernetes.pod.namespace": "shop"
  ingress:
  - fromEntities:
    - host
    toPorts:
    - ports:
      - port: "15021"
        protocol: TCP
